--- a/index.html
+++ b/index.html
@@ -230,19 +230,9 @@
     </div>
   </div>
   <script src="./index.js"></script>
-<script>
-  function initFreshChat() {
-    window.fcWidget.init({
-      	 token: "14c2aebc-dd8b-4064-aa5e-895114da0ed0",
-	 host: "https://widgetprodsanity4.freshchat.com"
-    });
-  }
-  function initialize(i,t){var e;i.getElementById(t)?
-  initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,
-  e.src="https://widgetprodsanity4.freshchat.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}
-  function initiateCall(){initialize(document,"Freshchat-js-sdk")}
-  window.addEventListener?window.addEventListener("load",initiateCall,!1):
-  window.attachEvent("load",initiateCall,!1);
+<script
+src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/8659318/6994855.js'
+chat='true'>
 </script>
 </body>
 </html>
