--- a/index.html
+++ b/index.html
@@ -34,9 +34,19 @@
       height: 400px;
     }
   </style>
-  <script
-src='//fm-staging-us-app-cdnjs.s3.amazonaws.com/crm/8659318/6994855.js'
-chat='true'>
+<script>
+  function initFreshChat() {
+    window.fcWidget.init({
+      	 token: "9eb1469a-1072-4887-bde3-34aaf393792a",
+	 host: "https://teal-10apr.freshpori.com"
+    });
+  }
+  function initialize(i,t){var e;i.getElementById(t)?
+  initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,
+  e.src="https://teal-10apr.freshpori.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}
+  function initiateCall(){initialize(document,"Freshchat-js-sdk")}
+  window.addEventListener?window.addEventListener("load",initiateCall,!1):
+  window.attachEvent("load",initiateCall,!1);
 </script>
 </head>
 <body>
