--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   function initFreshChat() {
     window.fcWidget.init({
      token: "9eb1469a-1072-4887-bde3-34aaf393792a",
-     host: "https://teal-10apr.freshpori.com"
+     host: "https://teal-10apr.freshpori.com",
+      config: {
+        eagerLoad: false
+      }
     });
   }
   function initialize(i,t){var e;i.getElementById(t)?
