--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
   function initFreshChat() {
     window.fcWidget.init({
       	 token: "9eb1469a-1072-4887-bde3-34aaf393792a",
-	 host: "https://teal-10apr.freshpori.com",
-     config: {
-     	eagerLoad: false
-     }
+	 host: "https://teal-10apr.freshpori.com"
     });
   }
   function initialize(i,t){
