--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
   function initialize(i,t){
   	var e;i.getElementById(t)?
   initFreshChat():((e=i.createElement("script")).id=t,e.async=!0,
-  e.src="https://teal-10apr.freshpori.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))}
+  e.src="https://teal-10apr.freshpori.com/js/widget.js",e.onload=initFreshChat,i.head.appendChild(e))
+  sendDataToParent();
+  }
   
   function initiateCall(){initialize(document,"Freshchat-js-sdk")}
   
   window.addEventListener?window.addEventListener("load",initiateCall,!1):
   
   window.attachEvent("load",initiateCall,!1);
+function sendDataToParent("hello from parent") {
+    var parentWindow = window.parent;
+    parentWindow.postMessage(data, 'https://widget-test-site-au.netlify.app');
+}
 </script>
 </body>
 </html>
