--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
   window.addEventListener?window.addEventListener("load",initiateCall,!1):
   
   window.attachEvent("load",initiateCall,!1);
-function sendDataToParent(data) {
-    var parentWindow = window.parent;
-    parentWindow.postMessage(data, 'https://widget-test-site-au.netlify.app');
-}
+document.addEventListener("DOMContentLoaded", function() {
+	function sendDataToParent(data) {
+	    var parentWindow = window.parent;
+	    parentWindow.postMessage(data, 'https://widget-test-site-au.netlify.app');
+	}
+});
 </script>
 </body>
 </html>
